# ClientServer-ParallelMergeSort

./: .gitignore  CMakeLists.txt  Documentation.md  README.md  client  generate_random_vec.cpp  main  server
Client/: CMakeLists.txt  main.cpp
Client/src/: main.cpp
Server/: CMakeLists.txt  main.cpp  merge-sort.cpp  merge-sort.h  mergesort.cpp  server.cpp  server.hpp  test.cpp  threadpool.cpp  threadpool.h
Server/include/: mergesort.h  server.h  threadpool.h
Server/src/: main.cpp  mergesort.cpp  server.cpp  threadpool.cpp
